[package]
name = "vehicle-signals"
version = "0.3.1"
edition = "2021"
build = "build.rs"
description = "DDS topics (for cyclonedds-rs) created from GENIVI/W3C Vehicle Signal Specification"
authors = ["Sojan James <Sojan.James@gmail.com>"]
homepage = "https://github.com/sabaton-rs/vehicle_signals"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyclonedds-rs = "0.4"
cdds_derive = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4.22"

[build-dependencies]
csv = "1.1"
petgraph = "0.6"
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"]}
proc-macro2 = "1"
which = "4.2.2"
regex = "1.5.4"
itertools = "0.10.0"
joinery = "2.1.0"
